create module-infer and module-analyzer-jvm maven submodules
make core.typed depend on core.typed.infer

make module-analyzer-jvm

comment out unused requires